kubernetes/apps/lidarr/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: lidarr
  namespace: lidarr
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`lidarr.pxldi.de`)
      kind: Rule
      services:
        - name: lidarr
          port: 8686
  tls:
    certResolver: letsencrypt
